--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Ping Pong</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Chewy|Shadows+Into+Light+Two" rel="stylesheet">
+
   <script src="js/jquery-3.2.1.js" charset="utf-8"></script>
   <script src="js/script.js" charset="utf-8"></script>
 </head>
@@ -21,12 +23,19 @@
     <!-- Beginning of row-->
      <div class="row">
           <!-- Section  start about Ping Pong-->
-        <div class="col-md-3">
-         <p>  About ccvxdfd</p>
+        <div class="col-md-3 text-center">
+         <h1><b>About Ping Pong</b></h1>
+         <h2>Created by:</h2>
+         <p>Caroline Theuri</p>
+         <h2>Github URL:</h2>
+         <p>https://github.com/caroltheuri</p>
+         <div id="image">
+
+         </div>
         </div>
           <!-- Section ending about Ping Pong-->
         <div class="col-md-9">
-          <h2>Come Let's Play</h2>
+          <h2><em><b>Come Let's Play</b></em></h2>
           <p>Before we start playing,I want us to know what the game is about.
           This is a game that lets you know what numbers are divisible by what multiples.</p>
           <P>Ping pong will count up to your number from 1 with the following exceptions:</P>
@@ -36,13 +45,16 @@
             <li>Numbers divisible by 5 become "pong"</li>
             <li>Numers divisible by both 3 and 5 become "ping-pong"</li><br>
           </ol>
+          <p > Don't let this guy make fun of you </p>
+          <img src="200w.webp" alt="trump" class="img-circle">
             <form id="divisibility">
               <div class="form-group">
                 <label for="divisible">Enter your preferred number hapa</label>
-                  <input type="text" id="divisible">
+                  <input type="number" id="divisible">
               </div>
               <button type="submit">Dare me!!!</button>
             </form>
+
            <div id="final">
 
            </div>
